# shaddup-rs

./: Cargo.toml  LICENSE  README.md
examples/: redirections.rs
src/: error.rs  lib.rs  opts.rs  unix.rs  unsupported.rs
