[package]
name = "shaddup"
description = "Suppress stdout and stderr of the current program. Works on Unix"
authors = ["Danya Generalov danya02@github"]
readme = "README.md"
homepage = "https://github.com/danya02/shaddup-rs"
repository = "https://github.com/danya02/shaddup-rs"
license = "MIT"

keywords=["stdout", "stderr", "quiet"]
categories=["os", "os:unix-apis"]

version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
nix = { version = "0.29.0", features = ["fs"] }

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[features]
allow_unsupported = []
no_op = []
